# val

./: Cargo.toml  GRAMMAR.txt  README.md
crates/val-wasm/: Cargo.toml
crates/val-wasm-libc-shim/: Cargo.toml
crates/val-wasm-libc-shim/src/: lib.rs
crates/val-wasm/src/: ast_node.rs  lib.rs
src/: arguments.rs  ast.rs  builtin.rs  builtin_arity.rs  builtin_function.rs  builtin_function_payload.rs  builtins.rs  decimal.rs  environment.rs  evaluator.rs  function.rs  highlight_kind.rs  highlighter.rs  lib.rs  parser.rs  value.rs
tests/: integration.rs
www/src/: App.tsx
www/src/components/: ast-node.tsx  ast-pane.tsx  editor-pane.tsx  editor-settings-dialog.tsx  editor.tsx
www/src/contexts/: editor-settings-context.ts
www/src/hooks/: use-editor-extensions.tsx  use-persisted-doc.tsx  use-val-ast.tsx  use-val-wasm.tsx
www/src/lib/: highlight.ts
www/src/providers/: editor-settings-provider.tsx
