[package]
name = "val"
version = "0.3.6"
edition = "2024"
authors = ["Liam <liam@scalzulli.com>"]
description = "An arbitrary precision calculator language"
license = "CC0-1.0"
repository = "https://github.com/terror/val"
homepage = "https://github.com/terror/val"
categories = ["science", "parser-implementations", "command-line-interface"]
keywords = ["productivity", "compilers"]

[[bench]]
name = "main"
harness = false

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [".", "crates/*"]
resolver = "2"

[patch.crates-io]
gmp-mpfr-sys = { path = "vendor/gmp-mpfr-sys" }
rug = { path = "vendor/rug" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[workspace.lints.rust]
unreachable_pub = "deny"

[features]
force-cross = ["dep:gmp-mpfr-sys", "gmp-mpfr-sys/force-cross"]

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
chumsky = { version = "0.13.0", features = ["pratt"] }
clap = { version = "4.5.60", features = ["derive"] }
gmp-mpfr-sys = { version = "~1.7", default-features = false, optional = true }
rug = { version = "1.30.0", default-features = false, features = ["float", "rational", "std"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
rustyline = "18.0.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
executable-path = "1.0.1"
indoc = "2.0.7"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
unindent = "0.2.4"
